--- a/googleOSD/googleOSD/googleOSD/MySQLBase.xaml
+++ b/googleOSD/googleOSD/googleOSD/MySQLBase.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:GoogleOSD"
  		Topmost="True"
 		mc:Ignorable="d"
-        Title="MySQLBase" Height="450" Width="Auto" d:DesignWidth="334">
+        Title="MySQLBase">
 	<!--WindowStartupLocation="CenterScreen"-->
 	<Window.Resources>
 		<Style TargetType="StackPanel">
@@ -63,7 +63,7 @@
 	</Window.Resources>
 	<Grid>
 		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="Auto" />
+			<ColumnDefinition Width="100" />
 			<ColumnDefinition Width="Auto" />
 			<ColumnDefinition Width="Auto" />
 			<ColumnDefinition Width="Auto" />
@@ -92,30 +92,23 @@
 			<RowDefinition  Height="Auto"/>
 			<RowDefinition x:Name="attach_row" Height="Auto"/>
 		</Grid.RowDefinitions>
-		<Label Content="Server "
-		   Grid.Row="1" Grid.Column="0" HorizontalAlignment="Right" />
-		<Label x:Name="server_lb"
-		   Grid.Row="1" Grid.Column="1"  />
+		<Label Content="Server " HorizontalAlignment="Right"  Grid.Row="0" Grid.Column="0"/>
+		<StackPanel Orientation="Horizontal"  Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3">
+			<Label x:Name="server_lb" MinWidth="50"/>
 
-		<Label Content="Port"
-		   Grid.Row="1" Grid.Column="2" HorizontalAlignment="Right" />
-		<Label  x:Name="port_lb"
-		   Grid.Row="1"  Grid.Column="3"  />
+			<Label Content="Port" HorizontalAlignment="Right" />
+			<Label  x:Name="port_lb" MinWidth="50"/>
 
-		<Label Content="Uid "
-		   Grid.Row="2" Grid.Column="0" HorizontalAlignment="Right" />
-		<Label x:Name="uid_lb"
-		   Grid.Row="2" Grid.Column="1"  />
+			<Label Content="Uid " HorizontalAlignment="Right" />
+			<Label x:Name="uid_lb"  MinWidth="50"/>
 
-		<Label Content="password"
-		   Grid.Row="2" Grid.Column="2" HorizontalAlignment="Right" />
-		<Label  x:Name="password_lb"
-		   Grid.Row="2"  Grid.Column="3"  />
+			<Label Content="password" HorizontalAlignment="Right" />
+			<Label  x:Name="password_lb"  MinWidth="50"/>
 
-		<Label Content="接続文字列"
-		   Grid.Row="3" Grid.Column="0" HorizontalAlignment="Right" />
-		<Label x:Name="connectionString_lb"
-		   Grid.Row="3" Grid.Column="1"  />
+		</StackPanel>
+		<Label Content="接続文字列" Grid.Row="1" Grid.Column="0"  HorizontalAlignment="Right" />
+			<Label x:Name="connectionString_lb"  MinWidth="100" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3"/>
+		<Label Content="テーブル選択" HorizontalAlignment="Right" Grid.Row="2" Grid.Column="0" />
 
 		<DataGrid x:Name ="table_dg"
 				ItemsSource="{Binding DataContext, Mode=TwoWay, RelativeSource={RelativeSource Self}}"
