--- a/googleOSD/googleOSD/googleOSD/MySQLBase.xaml
+++ b/googleOSD/googleOSD/googleOSD/MySQLBase.xaml
@@ -7,7 +7,7 @@
  		Topmost="True"
 		mc:Ignorable="d"
 		Width="Auto"
-        Title="MySQLBase" MinWidth="1000" HorizontalAlignment="Left" VerticalAlignment="Top" MinHeight="600" MaxWidth="1920" MaxHeight="1080" FontSize="14">
+        Title="MySQLBase" MinWidth="1000" HorizontalAlignment="Left" VerticalAlignment="Top" MinHeight="600" MaxWidth="1800" MaxHeight="960" FontSize="14" d:DesignHeight="669" Height="Auto">
 	<!--WindowStartupLocation="CenterScreen"-->
 	<Window.Resources>
 		<Style TargetType="StackPanel">
@@ -62,7 +62,7 @@
 		</Style>
 
 	</Window.Resources>
-	<Grid Margin="0,0,-10,0">
+	<Grid Margin="0,0,0,0" >
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="110" />
 			<ColumnDefinition Width="Auto" />
@@ -132,7 +132,8 @@
 
 		<DataGrid x:Name ="table_dg"
 				ItemsSource="{Binding DataContext, Mode=TwoWay, RelativeSource={RelativeSource Self}}"
-				Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="4" Width="Auto" MinWidth="750" MinHeight="400"/>
+				HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto"
+				Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="4" Width="Auto" MinWidth="750" MinHeight="400" Margin="5,0,10,0"/>
 		<!--ItemsSource="{Binding DataContext, Mode=TwoWay}"-->
 
 		<Button   Grid.Row="16" Grid.Column="0"
@@ -143,7 +144,7 @@
 							  Name="del_bt" Content="削除"/>
 		<Button   Grid.Row="16" Grid.Column="4"
 					HorizontalAlignment="Right"  VerticalAlignment="Center" Width="80"  
-					Name="save_bt" Content="登録" />
+					Name="save_bt" Content="登録" Margin="5,5,10,5" />
 
 
 		<Button   Grid.Row="17" Grid.Column="0"
@@ -151,7 +152,7 @@
 							Name="dis_conect_bt" Content="接続解除" Click="Dis_conect_bt_Click"/>
 		<Button   Grid.Row="17" Grid.Column="3"
 					HorizontalAlignment="Right"  VerticalAlignment="Bottom" Width="80"  
-					Name="conect_bt" Content="接続" Margin="0,0,5,6" Click="Conect_bt_Click"  />
+					Name="conect_bt" Content="接続" Margin="0,0,10,6" Click="Conect_bt_Click"  />
 
 	</Grid>
 </Window>
