--- a/googleOSD/googleOSD/googleOSD/MySQLBase.xaml
+++ b/googleOSD/googleOSD/googleOSD/MySQLBase.xaml
@@ -131,10 +131,10 @@
 		</ComboBox>
 
 		<DataGrid x:Name ="table_dg"
-				ItemsSource="{Binding DataContext, Mode=TwoWay, RelativeSource={RelativeSource Self}}"
+				ItemsSource="{Binding DataContext, Mode=TwoWay , RelativeSource={RelativeSource Self}}"
 				HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto"
-				Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="4" Width="Auto" MinWidth="750" MinHeight="400" Margin="5,0,10,0"/>
-		<!--ItemsSource="{Binding DataContext, Mode=TwoWay}"-->
+				Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="4" Width="Auto" MinWidth="750" MinHeight="400" Margin="5,0,10,0" SelectedCellsChanged="Table_dg_SelectedCellsChanged"/>
+		<!--ItemsSource=  -->
 
 		<Button   Grid.Row="16" Grid.Column="0"
 							HorizontalAlignment="Left"  VerticalAlignment="Center" Width="80"
@@ -144,7 +144,7 @@
 							  Name="del_bt" Content="削除"/>
 		<Button   Grid.Row="16" Grid.Column="4"
 					HorizontalAlignment="Right"  VerticalAlignment="Center" Width="80"  
-					Name="save_bt" Content="登録" Margin="5,5,10,5" />
+					Name="save_bt" Content="登録" Margin="5,5,10,5" Click="Save_bt_Click" />
 
 
 		<Button   Grid.Row="17" Grid.Column="0"
