--- a/googleOSD/googleOSD/googleOSD/MySQLBase.xaml
+++ b/googleOSD/googleOSD/googleOSD/MySQLBase.xaml
@@ -133,7 +133,7 @@
 		<DataGrid x:Name ="table_dg"
 				ItemsSource="{Binding DataContext, Mode=TwoWay , RelativeSource={RelativeSource Self}}"
 				HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto"
-				Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="4" Width="Auto" MinWidth="750" MinHeight="400" Margin="5,0,10,0" SelectedCellsChanged="Table_dg_SelectedCellsChanged"/>
+				Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="4" Width="Auto" MinWidth="750" MinHeight="400" Margin="5,0,10,0" RowEditEnding="Table_dg_RowEditEnding" SelectedCellsChanged="Table_dg_SelectedCellsChanged"/>
 		<!--ItemsSource=  -->
 
 		<Button   Grid.Row="16" Grid.Column="0"
