--- a/googleOSD/googleOSD/googleOSD/MySQLBase.xaml
+++ b/googleOSD/googleOSD/googleOSD/MySQLBase.xaml
@@ -132,10 +132,15 @@
 
 		<DataGrid x:Name ="table_dg"
 				ItemsSource="{Binding DataContext, Mode=TwoWay , RelativeSource={RelativeSource Self}}"
-				HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto"
-				Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="4" Width="Auto" MinWidth="750" MinHeight="400" Margin="5,0,10,0" RowEditEnding="Table_dg_RowEditEnding" SelectedCellsChanged="Table_dg_SelectedCellsChanged"/>
-		<!--ItemsSource=  -->
-
+				HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto"  AutoGenerateColumns="False" 
+				Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="4" Width="Auto" MinWidth="750" MinHeight="400" Margin="5,0,10,0" RowEditEnding="Table_dg_RowEditEnding" SelectedCellsChanged="Table_dg_SelectedCellsChanged">
+			<!--<DataGrid.CellStyle>
+				<Style TargetType="DataGridCell">
+					<Setter E
+                        Value="DarkGray" />
+				</Style>
+			</DataGrid.CellStyle>-->
+		</DataGrid>
 		<Button   Grid.Row="16" Grid.Column="0"
 							HorizontalAlignment="Left"  VerticalAlignment="Center" Width="80"
 							Name="cancel_bt" Content="キャンセル" />
