--- a/uitest/Tab/TabCon/TabCon/Views/Child_Window.xaml
+++ b/uitest/Tab/TabCon/TabCon/Views/Child_Window.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="TabCon.Child_Window"
+﻿<Window x:Class="TabCon.Views.Child_Window"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,8 +7,10 @@
         mc:Ignorable="d"
 		Topmost="True"
         Title="Child_Window" Height="450" Width="800">
-    <Grid>
+	<Grid>
 		<Label Name="CInfo_lb" Content="読込まれたPage" HorizontalAlignment="Left" VerticalAlignment="Top" Width="365"/>
-		<Button x:Name="CwindowCloss_bt" Content="閉じる" HorizontalAlignment="Left" Height="29" Margin="670,380,0,0" VerticalAlignment="Top" Width="112" Click="CwindowCloss_bt_Click"/>
+		<Button x:Name="CwindowCloss_bt" Content="閉じる" 
+						HorizontalAlignment="Left" Height="29" Margin="670,380,0,0" VerticalAlignment="Top" Width="112" 
+						Click="CwindowCloss_bt_Click"/>
 	</Grid>
 </Window>
