--- a/uitest/Tab/TabCon/TabCon/ViewTabControl.xaml
+++ b/uitest/Tab/TabCon/TabCon/ViewTabControl.xaml
@@ -6,45 +6,58 @@
              xmlns:local="clr-namespace:TabCon"
 			 xmlns:igWPF="http://schemas.infragistics.com/xaml/wpf"
 			 mc:Ignorable="d" 
+			 Width="Auto" 
              d:DesignHeight="450" d:DesignWidth="1000">
+
 	<Grid Margin="0,0,0,0" >
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="Auto" />
-			<ColumnDefinition Width="*" />
 		</Grid.ColumnDefinitions>
 		<Grid.RowDefinitions >
-			<RowDefinition Height="50"/>
+			<RowDefinition Height="Auto"/>
 			<RowDefinition Height="*"/>
 		</Grid.RowDefinitions>
 
-		<Label x:Name="InfoLavel" Content="{Binding InfoLavel}"  Grid.Row="0" Grid.Column="1"  Height="50"
-					HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="Auto"/>
+		<StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0">
+			<Label x:Name="InfoLavel" Content="{Binding InfoLavel}"  
+						Height="30"  Width="300"
+						HorizontalAlignment="Left" Margin="10,5,0,0"/>
+			<StackPanel  Orientation="Horizontal" HorizontalAlignment="Right">
+				<ComboBox x:Name="TypeSerect"
+						ItemsSource="{Binding RTyps}" SelectedValuePath="Key" DisplayMemberPath="Value"
+						 MinWidth="100" Margin="10,5,5,5"
+						SelectionChanged="TypeSerect_SelectionChanged"/>
+				<Button  x:Name="TabAdd"  Content="タブ追加" 
+							HorizontalAlignment="Right" Margin="10,5,5,5" Width="100"
+							Click="TabAdd_Click"/>
 
-		<StackPanel Grid.Row="0" Grid.Column="0" Grid.RowSpan="2">
-			<Button  x:Name="TabAdd"  Content="タブ追加" HorizontalAlignment="Left" Margin="20,5,0,6" Width="100" Click="TabAdd_Click">
-			</Button>
-
-			<Button  x:Name="TabDrel"  Content="タブ削除" HorizontalAlignment="Left" Margin="20,5,0,6" Grid.Row="1" Width="100" Click="TabDrel_Click">
-			</Button>
-			<StackPanel  Margin="20">
-				<Label Content="読込対象"  HorizontalAlignment="Left" VerticalAlignment="Top" />
-				<RadioButton x:Name="VM_rb" Content="ViewModel" GroupName="RTyps"  Checked="ReadType_Checked"/>
-				<RadioButton x:Name="VP_rb" Content="View(page)" GroupName="RTyps"  Checked="ReadType_Checked" IsChecked="True"/>
-				<RadioButton x:Name="Page_rb" Content="Page" GroupName="RTyps" Checked="ReadType_Checked"/>
-				<RadioButton x:Name="Window_rb" Content="Window" GroupName="RTyps"  Checked="ReadType_Checked"/>
+				<Button  x:Name="TabDrel"  Content="タブ削除"
+							HorizontalAlignment="Right" Margin="20,5,5,5" Width="100" 
+							Click="TabDrel_Click"/>
 			</StackPanel>
+			<StackPanel Grid.Row="0" Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Right">
+				<ComboBox x:Name="WindowSerect"
+						ItemsSource="{Binding WindowTyps}" SelectedValuePath="Key" DisplayMemberPath="Value"
+						MinWidth="100" Margin="10,5,5,5" SelectionChanged="WindowSerect_SelectionChanged"/>
+				<Button  x:Name="AddWindow"  Content="追加"
+							HorizontalAlignment="Right" Margin="20,5,5,5" Width="100" Click="AddWindow_Click" />
+				<!--<StackPanel Grid.Row="0" Grid.Column="0" Grid.RowSpan="2">
+
 			<Label Content="画面遷移確認"  HorizontalAlignment="Left" Margin="10,100,0,0" VerticalAlignment="Top" />
 			<Button  x:Name="OpenVM"  Content="ViewModel遷移" HorizontalAlignment="Left" Margin="20,5,0,6"  Click="OpenVM_Click"/>
 			<Button  x:Name="OpenWindow"  Content="Window遷移" HorizontalAlignment="Left" Margin="20,5,0,6" Click="OpenWindow_Click"/>
 			<Button  x:Name="OpenDialog"  Content="ダイアログ" HorizontalAlignment="Left" Margin="20,5,0,6" MinWidth="100" Click="OpenDialog_Click"/>
 			<Button  x:Name="NaniWindow"  Content="Navigation" HorizontalAlignment="Left" Margin="20,5,0,6"  MinWidth="100" Click="NaniWindow_Click"/>
+		-->
+			</StackPanel>
 		</StackPanel>
 
 		<igWPF:XamTabControl  x:Name="MainTab" 
 				ItemsSource="{Binding TabItems}" 
 				SelectedItem="{Binding TabSelected}" 
-				Width="800" Height="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-				 Grid.Row="1" Grid.Column="1" 
+				Width="960" Height="Auto" 
+				HorizontalAlignment="Left" VerticalAlignment="Stretch"
+				 Grid.Row="1" Grid.Column="0"
 				 TabItemCloseButtonVisibility="Visible"
 				 TabLayoutStyle="MultiRowSizeToFit"
 				 MaximumTabRows="4"
@@ -53,7 +66,7 @@
 				 InterTabSpacing="2" 
 				 InterRowSpacing="2"
 				 AllowTabClosing="True"  ShowTabHeaderCloseButton="True"
-				 Margin="21,0,21,10"
+				 Margin="10,0,10,10"
 				 ScrollViewer.CanContentScroll="True" SelectionChanged="MainTab_SelectionChanged"
 				 >
 		</igWPF:XamTabControl>
