--- a/uitest/Tab/TabCon/TabCon/Views/MainWindow.xaml
+++ b/uitest/Tab/TabCon/TabCon/Views/MainWindow.xaml
@@ -10,53 +10,81 @@
 		xmlns:vm="clr-namespace:TabCon.ViewModels"
 		xmlns:b="clr-namespace:TabCon.Behaviors"
 		Title="画面遷移確認"
-		Height="700" Width="1000" FontSize="14" WindowStartupLocation="CenterScreen"
+		Height="800" Width="1195"
+		FontSize="14" WindowStartupLocation="CenterScreen" 
 		>
-	<!---->
-
-
-	<Window.DataContext>
+	<!--<Window.DataContext>
 		<vm:MainViewModel />
-	</Window.DataContext>
+	</Window.DataContext>-->
 
-	<i:Interaction.Triggers>
+	<!--<i:Interaction.Triggers>
 		<i:EventTrigger EventName="ContentRendered">
-			<!--<l:LivetCallMethodAction MethodTarget="{Binding}" MethodName="Initialize" />-->
+			--><!--<l:LivetCallMethodAction MethodTarget="{Binding}" MethodName="Initialize" />--><!--
 		</i:EventTrigger>
 
-		<!--<l:livetInteractionMessageTrigger MessageKey="MessageKey2" Messenger="{Binding MessageKey2}">
+		--><!--<l:livetInteractionMessageTrigger MessageKey="MessageKey2" Messenger="{Binding MessageKey2}">
 			<l:TransitionInteractionMessageAction WindowType="{x:Type v:ChildView}" Mode="Modal"
                                                   InvokeActionOnlyWhenWindowIsActive="False" />
 		</l:livetInteractionMessageTrigger>-->
 
 		<!--
 		 "livetInteractionMessageTrigger" は名前空間 "http://schemas.livet-mvvm.net/2011/wpf" に存在しません。	
-		-->
+		--><!--
 	</i:Interaction.Triggers>
 
 	<i:Interaction.Behaviors>
 		<b:CloseButtonBehavior IsWindowCloseEnable="{Binding ElementName=CloseCheck, Path=IsChecked}"/>
-	</i:Interaction.Behaviors>
+	</i:Interaction.Behaviors>-->
 
 	<Grid Margin="0,0,0,0" >
 		<Grid.ColumnDefinitions>
-			<ColumnDefinition />
-			<ColumnDefinition />
+			<ColumnDefinition Width="Auto"/>
+			<ColumnDefinition Width="Auto"/>
 		</Grid.ColumnDefinitions>
 		<Grid.RowDefinitions >
-			<RowDefinition Height="*" />
-			<RowDefinition Height="50"/>
+			<RowDefinition Height="Auto" />
+			<RowDefinition Height="*"/>
 		</Grid.RowDefinitions>
-		<local:ViewTabControl Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"/>
-		<Button Command="{Binding GotoCommand2}"  Content="ChildViewへ"
-				 Grid.Row="1" Grid.Column="0"  HorizontalAlignment="Left" 
-                Height="32" MinWidth="100" Margin="20,10,0,0"
-                Name="button2" VerticalAlignment="Top" />
 
-		<Button Command="{Binding CloseCommand}" Content="終了"
-				 Grid.Row="1" Grid.Column="2" HorizontalAlignment="Right" 
-                Height="32" MinWidth="100" Margin="0,10,20,0"
-                Name="button1" VerticalAlignment="Top" />
+		<StackPanel  Grid.Row="0" Grid.Column="0" Grid.RowSpan="2">
+			<TreeView x:Name="MenuTree"
+				Margin="0,0,10,0" MinHeight="400" Width="Auto"
+				ItemsSource="{Binding _MyMenu}">
+				<TreeView.Resources>
+					<Style TargetType="TreeViewItem">
+						<Setter Property="IsSelected" Value="{Binding Path=IsSelected,Mode=TwoWay}"/>
+					</Style>
+				</TreeView.Resources>
+				<TreeView.ItemTemplate>
+					<HierarchicalDataTemplate DataType= "local:Person" ItemsSource="{Binding Child}">
+						<TextBlock Text="{Binding Name}"/>
+					</HierarchicalDataTemplate>
+				</TreeView.ItemTemplate>
+			</TreeView>
+
+			<Button Command="{Binding TabTest}"  Content="Tabテスト"
+				HorizontalAlignment="Left" 
+                Height="32" MinWidth="100" Margin="10,10,0,0"
+                Name="TabTest" VerticalAlignment="Top" />
+
+
+			<Button Command="{Binding GotoCommand2}"  Content="ChildViewへ"
+				HorizontalAlignment="Left" 
+                Height="32" MinWidth="100" Margin="10,10,0,0"
+                Name="button2" VerticalAlignment="Bottom" />
+
+			<Button Command="{Binding CloseCommand}" Content="終了"
+				 HorizontalAlignment="Left" 
+                Height="32" MinWidth="100" Margin="10,10,20,0"
+                Name="button1" VerticalAlignment="Bottom" />
+
+		</StackPanel>
+		<Label x:Name="InfoLavel" Content="{Binding InfoLavel}"  
+						Grid.Row="0" Grid.Column="1" 
+						Height="30"  Width="Auto"
+						HorizontalAlignment="Left" Margin="10,5,0,0"/>
+
+		<local:ViewTabControl Grid.Row="1" Grid.Column="1"/>
 	</Grid>
 
 </Window>
