--- a/uitest/Tab/TabCon/TabCon/ViewTabControl.xaml
+++ b/uitest/Tab/TabCon/TabCon/ViewTabControl.xaml
@@ -67,7 +67,7 @@
 				 InterRowSpacing="2"
 				 AllowTabClosing="True"  ShowTabHeaderCloseButton="True"
 				 Margin="10,0,10,10"
-				 ScrollViewer.CanContentScroll="True" SelectionChanged="MainTab_SelectionChanged"
+				 ScrollViewer.CanContentScroll="True"
 				 >
 		</igWPF:XamTabControl>
 		<!--<TabControl x:Name="MainTab" ItemsSource="{Binding TabItems}"
