--- a/uitest/Tab/TabCon/TabCon/WindowTabContentUC.xaml
+++ b/uitest/Tab/TabCon/TabCon/WindowTabContentUC.xaml
@@ -7,8 +7,10 @@
 			 xmlns:integration="clr-namespace:System.Windows.Forms.Integration;assembly=WindowsFormsIntegration"
 			 mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-		<Frame x:Name="TabContent"/>
-            <!--<integration:WindowsFormsHost />-->
-    </Grid>
+	<ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+		<Grid>
+			<Frame x:Name="TabContent"/>
+				<!--<integration:WindowsFormsHost />-->
+		</Grid>
+	</ScrollViewer>
 </UserControl>
