--- a/uitest/Tab/TabCon/TabCon/Views/MySQLBase.xaml
+++ b/uitest/Tab/TabCon/TabCon/Views/MySQLBase.xaml
@@ -1,12 +1,15 @@
 ﻿<Page x:Class="TabCon.Views.MySQLBase"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:TabCon.Views"
-      mc:Ignorable="d" 
-		Width="Auto"
-        Title="MySQLBase" MinWidth="1000" HorizontalAlignment="Left" VerticalAlignment="Top" MinHeight="600" MaxWidth="1600" MaxHeight="800" FontSize="14" d:DesignHeight="669" Height="Auto">
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" 
+xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"  
+	  xmlns:local="clr-namespace:TabCon.Views"
+	  xmlns:l1="http://schemas.microsoft.com/xaml/behaviors"
+	  xmlns:behaviors="clr-namespace:Livet.Behaviors;assembly=Livet.Behaviors"
+	  xmlns:converters="http://schemas.livet-mvvm.net/2011/wpf"
+	  Height="Auto" Width="Auto" 
+        Title="MySQLBase" MinWidth="1000" HorizontalAlignment="Left" VerticalAlignment="Top" 
+		MinHeight="600" MaxWidth="1600" MaxHeight="800" FontSize="14">
 
 	<Page.Resources>
 		<Style TargetType="StackPanel">
@@ -68,7 +71,6 @@
 			<ColumnDefinition Width="Auto" />
 			<ColumnDefinition Width="*" />
 			<ColumnDefinition Width="*" />
-			<!--<ColumnDefinition Width="*"/>-->
 		</Grid.ColumnDefinitions>
 		<Grid.RowDefinitions >
 			<RowDefinition Height="Auto"/>
@@ -96,47 +98,55 @@
 	
 	<Label Content="Server " HorizontalAlignment="Right"  Grid.Row="0" Grid.Column="0"/>
 		<StackPanel Orientation="Horizontal"  Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3">
-			<TextBox x:Name="server_lb" MinWidth="50"/>
-
+			<TextBox x:Name="server_lb" Text="{Binding server}"  
+							MinWidth="50"/>
 			<Label Content="Database" HorizontalAlignment="Right"  />
-			<!--<Label  x:Name="database_lb" MinWidth="50"/>-->
-			<TextBox  x:Name="database_lb" MinWidth="50"/>
+			<TextBox  x:Name="database_lb" Text="{Binding database}"  
+							 MinWidth="50"/>
 			<Label Content="Port" HorizontalAlignment="Right" />
-			<TextBox  x:Name="port_lb" MinWidth="50"/>
-
+			<TextBox  x:Name="port_lb" Text="{Binding port}"  
+							 MinWidth="50"/>
 			<Label Content="Uid " HorizontalAlignment="Right" />
-			<TextBox x:Name="uid_lb"  MinWidth="50"/>
-
+			<TextBox x:Name="uid_lb" Text="{Binding uid}"  
+							 MinWidth="50"/>
 			<Label Content="password" HorizontalAlignment="Right" />
-			<TextBox  x:Name="password_lb"  MinWidth="50"/>
+			<TextBox  x:Name="password_lb" Text="{Binding password}"  
+							 MinWidth="50"/>
 
 		</StackPanel>
 		<Label Content="接続文字列" Grid.Row="1" Grid.Column="0"  HorizontalAlignment="Right" />
-		<Label x:Name="connectionString_lb"  MinWidth="100" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3"/>
+		<Label x:Name="connectionString_lb"  Content="{Binding connectionString}"  
+						MinWidth="100" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3"/>
 		<Label Content="テーブル選択" HorizontalAlignment="Right" Grid.Row="2" Grid.Column="0" />
 
 		<ComboBox x:Name="table_combo"
-							ItemsSource="{Binding TableCombo}" SelectedValuePath="Value" DisplayMemberPath="Key"
+							ItemsSource="{Binding TableCombo}"
+							SelectedValuePath="Value" DisplayMemberPath="Key"
+							Visibility="{Binding TableComboVisibility}"
 							Grid.Row="2" Grid.Column="1"   Grid.ColumnSpan="3"
 							Height="24" Width="Auto" HorizontalAlignment="Left" >
 			<!--SelectionChanged="Table_combo_SelectionChanged">-->
 
 		</ComboBox>
 
-		<DataGrid x:Name ="table_dg"
+
+		<DataGrid 
+				x:Name ="table_dg"
 				ItemsSource="{Binding DataContext, Mode=TwoWay , RelativeSource={RelativeSource Self}}"
 				HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto"  AutoGenerateColumns="False" 
 				Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="4" Width="Auto" MinWidth="750" MinHeight="400"
 				Margin="5,0,10,0">
 			<!-- RowEditEnding="Table_dg_RowEditEnding"  SelectedCellsChanged="Table_dg_SelectedCellsChanged">-->
-
 		</DataGrid>
+
 		<Button   Grid.Row="16" Grid.Column="0"
 							HorizontalAlignment="Left"  VerticalAlignment="Center" Width="80"
 							Name="cancel_bt" Content="キャンセル" />
 		<Button  Grid.Row="16" Grid.Column="1" Grid.ColumnSpan="2"
 						HorizontalAlignment="Right"  VerticalAlignment="Center" Width="80"
-							  Name="del_bt" Content="削除"/>
+							  Name="del_bt" Content="削除"
+							  Visibility="{Binding delBtVisibility}"
+							  />
 		<Button   Grid.Row="16" Grid.Column="4"
 					HorizontalAlignment="Right"  VerticalAlignment="Center" Width="80"  
 					Name="save_bt" Content="登録" Margin="5,5,10,5"/>
@@ -145,12 +155,33 @@
 
 		<Button   Grid.Row="17" Grid.Column="0"
 							HorizontalAlignment="Left"  VerticalAlignment="Center" Width="80"
-							Name="dis_conect_bt" Content="接続解除" />
+							Name="dis_conect_bt" Content="接続解除"
+							Command="{Binding DisConectClicked}"
+							Visibility="{Binding disConectBtVisibility}"
+							>
 							<!--Click="Dis_conect_bt_Click"/>-->
+			<!--<i:Interaction.Triggers>
+				<i:EventTrigger EventName="Click">
+					<l:OpenFileDialogInteractionMessageAction>
+						<l:DirectInteractionMessage CallbackCommand="{Binding DisConectClicked}">
+						</l:DirectInteractionMessage>
+					</l:OpenFileDialogInteractionMessageAction>
+				</i:EventTrigger>
+			</i:Interaction.Triggers>-->
+
+
+			<!--<l1:Interaction.Triggers>
+				<l1:EventTrigger EventName="Click">
+					<behaviors:LivetCallMethodAction MethodTarget="{Binding}" MethodName="DisConectClicked" />
+				</l1:EventTrigger>
+			</l1:Interaction.Triggers>-->
+		</Button>
 		<Button   Grid.Row="17" Grid.Column="3"
 					HorizontalAlignment="Right"  VerticalAlignment="Bottom" Width="80"  
-					Name="conect_bt" Content="接続" Margin="0,0,10,6" />
-					<!--Click="Conect_bt_Click"  />-->
-
+					Name="conect_bt" Content="接続"
+					Command="{Binding ConectClicked}"
+					Visibility="{Binding conectBtVisibility}"
+					Margin="0,0,10,6" >
+		</Button>
 	</Grid>
-	</Page>
+</Page>
