--- a/uitest/Tab/TabCon/TabCon/Views/MySQLBase.xaml
+++ b/uitest/Tab/TabCon/TabCon/Views/MySQLBase.xaml
@@ -1,17 +1,27 @@
 ﻿<Page x:Class="TabCon.Views.MySQLBase"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" 
-xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"  
-	  xmlns:local="clr-namespace:TabCon.Views"
-	  xmlns:l1="http://schemas.microsoft.com/xaml/behaviors"
-	  xmlns:behaviors="clr-namespace:Livet.Behaviors;assembly=Livet.Behaviors"
-	  xmlns:converters="http://schemas.livet-mvvm.net/2011/wpf"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+        xmlns:l="http://schemas.livet-mvvm.net/2011/wpf"
+        xmlns:local="clr-namespace:TabCon" 
+        xmlns:dg="http://schemas.microsoft.com/wpf/2008/toolkit"
+        xmlns:v="clr-namespace:TabCon.Views"
+        xmlns:vm="clr-namespace:TabCon.ViewModels"
+        xmlns:clr="clr-namespace:TabCon"
 	  Height="Auto" Width="Auto" 
         Title="MySQLBase" MinWidth="1000" HorizontalAlignment="Left" VerticalAlignment="Top" 
 		MinHeight="600" MaxWidth="1600" MaxHeight="800" FontSize="14">
 
 	<Page.Resources>
+		<!--<ResourceDictionary>
+			<vm:XComboBoxEmptyItemConverter x:Key="XComboBoxEmptyItemConverter"/>
+			--><!--<ResourceDictionary.MergedDictionaries>
+				<ResourceDictionary Source="/Resources/Styles.xaml"/>
+				<ResourceDictionary Source="/Resources/Styles2.xaml"/>
+				<ResourceDictionary Source="/Resources/StylesBG.xaml"/>
+			</ResourceDictionary.MergedDictionaries>--><!--
+		</ResourceDictionary>-->
+
 		<Style TargetType="StackPanel">
 			<Setter Property="VerticalAlignment" Value="Center"/>
 			<Setter Property="Margin" Value="0,5,0,5"/>
@@ -121,11 +131,14 @@ xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
 
 		<ComboBox x:Name="table_combo"
 							ItemsSource="{Binding TableCombo}"
-							SelectedValuePath="Value" DisplayMemberPath="Key"
+							SelectedValuePath="Value" DisplayMemberPath="name"
+							SelectedValue="{Binding TableComboSelectedValueChanged, Mode=TwoWay}"
 							Visibility="{Binding TableComboVisibility}"
 							Grid.Row="2" Grid.Column="1"   Grid.ColumnSpan="3"
 							Height="24" Width="Auto" HorizontalAlignment="Left" >
-			<!--SelectionChanged="Table_combo_SelectionChanged">-->
+			<!--SelectionChanged="Table_combo_SelectionChanged">
+			 Converter={StaticResource XComboBoxEmptyItemConverter}
+			-->
 
 		</ComboBox>
 
