--- a/uitest/Tab/TabCon/TabCon/Views/MySQLBase.xaml
+++ b/uitest/Tab/TabCon/TabCon/Views/MySQLBase.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:l="http://schemas.livet-mvvm.net/2011/wpf"
-        xmlns:local="clr-namespace:TabCon" 
+		xmlns:igDP="http://infragistics.com/DataPresenter"     xmlns:local="clr-namespace:TabCon" 
         xmlns:dg="http://schemas.microsoft.com/wpf/2008/toolkit"
         xmlns:v="clr-namespace:TabCon.Views"
         xmlns:vm="clr-namespace:TabCon.ViewModels"
@@ -70,7 +70,7 @@
 	<Grid Margin="0,0,0,0" >
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="110" />
-			<ColumnDefinition Width="Auto" />
+			<ColumnDefinition Width="*" />
 			<ColumnDefinition Width="*" />
 			<ColumnDefinition Width="*" />
 		</Grid.ColumnDefinitions>
@@ -100,27 +100,22 @@
 
 		<Label Content="Server " HorizontalAlignment="Right"  Grid.Row="0" Grid.Column="0"/>
 		<StackPanel Orientation="Horizontal"  Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3">
-			<TextBox x:Name="server_lb" Text="{Binding server}"  
-							MinWidth="50"/>
+			<TextBox Text="{Binding server}"  MinWidth="50"/>
 			<Label Content="Database" HorizontalAlignment="Right"  />
-			<TextBox  x:Name="database_lb" Text="{Binding database}"  
-							 MinWidth="50"/>
+			<TextBox  Text="{Binding database}"  MinWidth="50"/>
 			<Label Content="Port" HorizontalAlignment="Right" />
-			<TextBox  x:Name="port_lb" Text="{Binding port}"  
-							 MinWidth="50"/>
+			<TextBox Text="{Binding port}"  MinWidth="50"/>
 			<Label Content="Uid " HorizontalAlignment="Right" />
-			<TextBox x:Name="uid_lb" Text="{Binding uid}"  
-							 MinWidth="50"/>
+			<TextBox Text="{Binding uid}"  MinWidth="50"/>
 			<Label Content="password" HorizontalAlignment="Right" />
-			<TextBox  x:Name="password_lb" Text="{Binding password}"  
-							 MinWidth="50"/>
+			<TextBox  Text="{Binding password}"   MinWidth="50"/>
 
 		</StackPanel>
 		<Label Content="接続文字列" Grid.Row="1" Grid.Column="0"  HorizontalAlignment="Right" />
-		<Label x:Name="connectionString_lb"  Content="{Binding connectionString}"  
-						MinWidth="100" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3"/>
-		<Label Content="テーブル選択" HorizontalAlignment="Right" Grid.Row="2" Grid.Column="0" />
+		<Label Content="{Binding connectionString}"  
+						MinWidth="100" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" />
 
+		<Label Content="テーブル選択" HorizontalAlignment="Right" Grid.Row="2" Grid.Column="0" />
 		<ComboBox x:Name="table_combo"
 							ItemsSource="{Binding TableCombo}"
 							SelectedValuePath="key"
@@ -131,23 +126,30 @@
 							Height="24" Width="Auto" >
 		</ComboBox>
 
-
-		<DataGrid 
+		<igDP:XamDataGrid
 				x:Name ="table_dg"
-				ItemsSource="{Binding DataContext, Mode=TwoWay , RelativeSource={RelativeSource Self}}"
-				HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto"  AutoGenerateColumns="False" 
+				DataSource="{Binding tablDataContext, Mode=TwoWay}"
 				Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="4" Width="Auto" MinWidth="750" MinHeight="400"
 				Margin="5,0,10,0">
-			<!-- RowEditEnding="Table_dg_RowEditEnding"  SelectedCellsChanged="Table_dg_SelectedCellsChanged">-->
-		</DataGrid>
+
+			<igDP:XamDataGrid.FieldLayoutSettings>
+				<!--レコード追加-->
+				<igDP:FieldLayoutSettings  AllowAddNew="True" AddNewRecordLocation="OnTopFixed"/>
+			</igDP:XamDataGrid.FieldLayoutSettings>
+		</igDP:XamDataGrid>
 
 		<Button   Grid.Row="16" Grid.Column="0"
 							HorizontalAlignment="Left"  VerticalAlignment="Center" Width="80"
 							Name="cancel_bt" Content="キャンセル" />
-		<Button  Grid.Row="16" Grid.Column="1" Grid.ColumnSpan="2"
+		<Button  Grid.Row="16" Grid.Column="1" 
 						HorizontalAlignment="Right"  VerticalAlignment="Center" Width="80"
 							  Name="del_bt" Content="削除"
 							  Visibility="{Binding delBtVisibility}"
+							  />
+		<Button  Grid.Row="16" Grid.Column="2" 
+						HorizontalAlignment="Right"  VerticalAlignment="Center" Width="80"
+							  Name="add_bt" Content="追加"
+							 Command="{Binding AddRecord}"
 							  />
 		<Button   Grid.Row="16" Grid.Column="4"
 					HorizontalAlignment="Right"  VerticalAlignment="Center" Width="80"  
