--- a/uitest/Tab/TabCon/TabCon/Views/MySQLBase.xaml
+++ b/uitest/Tab/TabCon/TabCon/Views/MySQLBase.xaml
@@ -3,7 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:l="http://schemas.livet-mvvm.net/2011/wpf"
-		xmlns:igDP="http://infragistics.com/DataPresenter"     xmlns:local="clr-namespace:TabCon" 
+		xmlns:igDP="http://infragistics.com/DataPresenter"     
+		xmlns:local="clr-namespace:TabCon" 
         xmlns:dg="http://schemas.microsoft.com/wpf/2008/toolkit"
         xmlns:v="clr-namespace:TabCon.Views"
         xmlns:vm="clr-namespace:TabCon.ViewModels"
@@ -127,16 +128,25 @@
 
 		<igDP:XamDataGrid
 				x:Name ="table_dg"
-				DataSource="{Binding tablDataContext, Mode=TwoWay}"
+				DataSource="{Binding  tablDataContext, Mode=TwoWay}"
+				ActiveRecord="{Binding  tablActiveRecord, Mode=TwoWay}"
 				Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="4" Width="Auto" MinWidth="750" MinHeight="400"
 				Margin="5,0,10,0">
 
 			<igDP:XamDataGrid.FieldLayoutSettings>
-				<!--レコード追加-->
-				<igDP:FieldLayoutSettings  AllowAddNew="True" AddNewRecordLocation="OnTopFixed"/>
+				<!--レコード追加
+				<igDP:FieldLayoutSettings  AllowAddNew="True" AddNewRecordLocation="OnTopFixed"/>-->
+				<igDP:FieldLayoutSettings 
+				SelectionTypeRecord="Single"
+				SelectionTypeField="Single"
+				/>
 			</igDP:XamDataGrid.FieldLayoutSettings>
 		</igDP:XamDataGrid>
 
+		<!--<igDP:XamDataCarousel
+				x:Name="XamDataCarousel1" DataSource="{Binding XPath=tablDataContext}"
+				Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="4"
+				/>-->
 		<Button   Grid.Row="16" Grid.Column="0"
 							HorizontalAlignment="Left"  VerticalAlignment="Center" Width="80"
 							Name="cancel_bt" Content="キャンセル" />
@@ -152,7 +162,9 @@
 							  />
 		<Button   Grid.Row="16" Grid.Column="4"
 					HorizontalAlignment="Right"  VerticalAlignment="Center" Width="80"  
-					Name="save_bt" Content="登録" Margin="5,5,10,5"/>
+					Name="save_bt" Content="登録" Margin="5,5,10,5"
+								 Command="{Binding RegistrationRecord}"
+				/>
 		<!--Click="Save_bt_Click" />-->
 
 
