サイズ追従

--- a/uitest/Tab/TabCon/TabCon/ViewTabControl.xaml
+++ b/uitest/Tab/TabCon/TabCon/ViewTabControl.xaml
@@ -11,17 +11,17 @@
 
 	<Grid Margin="0,0,0,0" >
 		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="Auto" />
+			<ColumnDefinition Width="*" />
 		</Grid.ColumnDefinitions>
 		<Grid.RowDefinitions >
 			<RowDefinition Height="Auto"/>
 			<RowDefinition Height="*"/>
 		</Grid.RowDefinitions>
 
-		<StackPanel x:Name="SelfConpane" Visibility="Hidden"
+		<StackPanel x:Name="SelfConpane" Visibility="Hidden" Height="0"
 			Orientation="Horizontal" Grid.Row="0" Grid.Column="0">
 			<Label x:Name="InfoLavel" Content="{Binding InfoLavel}"  
-						Height="Auto"  Width="300"
+						Height="Auto"  Width="Auto"
 						HorizontalAlignment="Left" Margin="10,5,0,0"/>
 			<StackPanel  Orientation="Horizontal" HorizontalAlignment="Right">
 				<ComboBox x:Name="TypeSerect"
@@ -48,8 +48,8 @@
 		<igWPF:XamTabControl  x:Name="MainTab" 
 				ItemsSource="{Binding TabItems}" 
 				SelectedItem="{Binding TabSelected}" 
-				Width="960" Height="Auto" 
-				HorizontalAlignment="Left" VerticalAlignment="Stretch"
+				Width="Auto" Height="Auto" 
+				HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
 				 Grid.Row="1" Grid.Column="0"
 				 TabItemCloseButtonVisibility="Visible"
 				 TabLayoutStyle="MultiRowSizeToFit"
